--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ room = "2.6.1"
 datastore = "1.1.1"
 hilt = "2.51"
 ksp = "1.9.23-1.0.19"
+nav = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +38,8 @@ datastore-preferences = { group = "androidx.datastore", name = "datastore-prefer
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav"}
 
 
 [plugins]
